firts touch phase 1.1
